tests/negative_fixtures/import_missing_file.shx
// Should fail - import errors

// Missing file
import "nonexistent.shx";
console.log("This should not compile");

// Invalid import syntax
import;  // Missing file path
import "";  // Empty file path
import 123;  // Non-string import
import "./utils.shx" as;  // Missing alias name
